...
                mainAxisAlignment: MainAxisAlignment.center,
                mainAxisSize: MainAxisSize.min,
                children: [
                  const Padding(
                    padding: EdgeInsets.all(0),
                    child: Text(
                      'Klikkaa painiketta\nuudelleen jos\nhaluat lähettää\nSOS -ilmoituksen',
                    ),
                  ),
                  Padding(
                    padding: const EdgeInsets.only(top: 80, bottom: 50),
                    child: ElevatedButton(
                      onPressed: () {
...
                        shape: const CircleBorder(),
                        padding: const EdgeInsets.all(80),
                        backgroundColor: const Color.fromARGB(255, 158, 29, 20),
                        textStyle: const TextStyle(
                            fontSize: 30, fontWeight: FontWeight.bold),
                      ),
                      child: const Text('SOS'),
                    ),
                  ),
                  Padding(
                    padding: const EdgeInsets.all(0),
                    child: OutlinedButton(
                      onPressed: () async {
...
