...
                  ),
                ),
              ),
            ),
            ListTile(
              leading: const Icon(Icons.home),
              title: const Text('Etusivu'),
              textColor: Colors.white70,
              onTap: () {
                RouteStateScope.of(context).go('/home');
              },
            ),
            ListTile(
              leading: const Icon(Icons.border_color),
              title: const Text('Tee uusi ilmoitus'),
              textColor: Colors.white70,
              onTap: () {
                RouteStateScope.of(context).go('/create_new_report');
              },
            ),
            ListTile(
...
