...
                    backgroundColor: const Color.fromARGB(255, 158, 29, 20),
                    textStyle: const TextStyle(
                      fontSize: 30,
                      fontWeight: FontWeight.bold
                    ),
                  ),
                  child: const Text('SOS'),
                ),
              ),
              Padding(
                padding: const EdgeInsets.all(0),
                child: OutlinedButton(
                  onPressed: () async {RouteStateScope.of(context).go('/signin');},
...
                    backgroundColor: const Color.fromARGB(255, 112, 162, 237),
                    textStyle: const TextStyle(
                      fontSize: 15,
                      fontWeight: FontWeight.bold,
                    ),
                  ),
                  child: const Text('Kirjaudu sisään'),
                ),
              ),
            ],
          ),
        ),
      ),
...
