...
                        onPressed: () => _onSendVideo(context),
                        label: const Text('Lähetä videokuvaa')),
                  ),
                ),
                TextButton(
                  onPressed: () => Navigator.of(context).pop(),
                  child: const Text('Lopeta lähetys'),
                ),
              ],
            ),
          ),
        ),
      );
...
